...
import UIKit

class TranslateController: UIViewController, SelectLanguageDelegate {
    // MARK: - view

    let inputText = UITextView()
    let placeholderTextInput = "Inserer le texte à Traduire"

    let outputText = UILabel()
    let wrappedOutputText = UIView()

    // MARK: - Language
    let inputLanguage = UIButton()
...
        ])
    }

    // MARK: - Switch
    private func setupSwitchButton() {
        switchBtn.addTarget(self, action: #selector(switchTraduction), for: .touchUpInside)
        switchBtn.accessibilityIdentifier = "switch"
    }

    @objc func switchTraduction() {
        UIView.animate(withDuration: 0.5, animations: {
            self.switchBtn.transform = self.switchBtn.transform.rotated(by: .pi)
        })
...
