...

    var city: City {
        switch self {
        case .pageZero:
            return City(name: "New York", coord: Coord(lat: 40.7127281, lon: -74.0060152), country: "US", sunrise: nil, sunset: nil)
        case .pageOne:
            return City(name: "Annecy", coord: Coord(lat: 45.8992, lon: 6.1289), country: "FR", sunrise: nil, sunset: nil)
        }
    }

    var index: Int {
        switch self {
        case .pageZero:
...
