...
    private func setupCity() {
        inputCity.borderStyle = .roundedRect
        inputCity.layer.cornerRadius = 10
        inputCity.tintColor = .lightGray
        inputCity.placeholder = "Entrez une ville"
        inputCity.isUserInteractionEnabled = true
        inputCity.accessibilityIdentifier = "inputTextField"

        searchCity.backgroundColor = .lightGray
        searchCity.setImage(UIImage(systemName: "magnifyingglass"), for: .normal)
        searchCity.tintColor = .white
        searchCity.layer.cornerRadius = 10
        searchCity.addTarget(self, action: #selector(tappedSearchCity), for: .touchUpInside)
...
